# CV_descriptors

./: .gitignore  classifiers.py  dataset.py  document.tex  features.py  notebook_descriptor_comparison.ipynb  notebook_template.ipynb  pipeline.py  presentation.tex  processing.py  promising_hog_combos_full_dataset.ipynb  pyproject.toml  requirements.txt
tests/: conftest.py  test_classifiers.py  test_dataset.py  test_features.py  test_pipeline.py  test_processing.py
