[project]
name = "cv-descriptors"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.23",
    "opencv-python>=4.8",
    "scikit-image>=0.21",
    "scikit-learn>=1.3",
    "matplotlib>=3.7",
    "jupyter>=1.0",
]

[dependency-groups]
dev = ["pytest>=8.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
